--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "db0a034b-1109-4979-89dd-d054a101f8d1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
